admin_tool/tests/003.out
Fatal error: Uncaught Error: Call to undefined function admin_tool_test2() in /var/www/html/so/admin_tool/tests/003.php:2
Stack trace:
#0 {main}
  thrown in /var/www/html/so/admin_tool/tests/003.php on line 2