admin_tool/tests/003.php
<?php
var_dump(admin_tool_test2());
var_dump(admin_tool_test2('PHP'));
?>
